--- a/packages/daemon/package.json
+++ b/packages/daemon/package.json
@@ -20,24 +20,26 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "better-sqlite3": "^9.2.2",
+    "bip39": "^3.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
-    "bip39": "^3.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/better-sqlite3": "^7.6.8",
-    "@types/uuid": "^9.0.7",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "@types/uuid": "^9.0.7",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.0",
-    "vitest": "^1.0.0",
-    "rimraf": "^5.0.5"
+    "vitest": "^1.0.0"
   },
   "optionalDependencies": {
     "@nodus/core": "^0.1.0"
