--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -10,20 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bip39": "^3.1.0",
     "next": "^14.0.4",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "tweetnacl": "^1.0.3",
-    "bip39": "^3.1.0",
-    "zustand": "^4.4.7",
-    "nprogress": "^0.2.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/node": "^20.10.0",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "@types/nprogress": "^0.2.3",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
