feat: Introduce core daemon service and web client application with initial configuration and documentation.

--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
   },
-  "packageManager": "npm@10.0.0"
+  "packageManager": "npm@10.0.0",
+  "dependencies": {
+    "@types/ws": "^8.18.1",
+    "ws": "^8.18.3"
+  }
 }
