feat: Introduce system mode, information, limits, and configuration APIs with a new desktop application.

--- a/packages/web-client/public/manifest.json
+++ b/packages/web-client/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Iceberg Protocol",
   "short_name": "Iceberg",
-  "description": "Plataforma descentralizada de informação cidadã",
+  "description": "Conhecimento da humanidade, preservado para sempre",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
